# risc0-ttc

./: .gitignore  .gitmodules  Cargo.toml  README.md  Summary.md  bootstrap.dhall  chanterelle.json  package-lock.json  package.json  packages.dhall  remappings.txt  spago.dhall
.cargo/: config.toml
.github/workflows/: lint.yml
contracts/: TTCTrading.sol  TestRelay.sol  Token.sol  Verifier.sol  bonsai  openzeppelin
host/: Cargo.toml
host/src/: main.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
purs/src/: Cycle.purs  Main.purs  Matrix.purs
purs/src/Contracts/: TTCTrading.purs  TestRelay.purs  Token.purs  Verifier.purs
purs/src/Deploy/: ContractConfig.purs  Deploy.purs  Main.purs
relay/: Cargo.toml
relay/examples/: callback_request.rs
relay/src/: main.rs
script/: BonsaiDeploy.sol  Deploy.s.sol
ttc/: Cargo.toml
ttc/src/: algorithm.rs  lib.rs  ttc_trading.rs
