[workspace]
members = ["host", "methods", "ttc"]

[workspace.dependencies]
ttc-host = { path = "./host", package = "ttc-host" }
ttc-methods = { path = "./methods", package = "ttc-methods" }
ttc = { path = "./ttc", package = "ttc" }

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3
