[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
ttc-methods = { path = "../methods" }
ttc = { path = "../ttc" }
risc0-zkvm = { version = "0.18.0" }
ethers-core = { version = "2.0" }
serde = "1.0"

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]
