[package]
name = "ttc"
version = "0.1.0"
edition = "2021"

## See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
err-derive = "0.3.1"
ethers-contract = { version = "2.0", default-features = false, features = ["abigen"] }
ethers-core = { version = "2.0", default-features = false }
hex = "0.4"
petgraph = { version = "0.6.3", default-features = false }
