[package]
name = "ttc-methods-guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "trade"
path = "src/bin/trade.rs"

[dependencies]
risc0-zkvm = { version = "0.18.0", default-features = false, features = ["std"] }
ethabi = { version = "18.0", default-features = false }
ttc = { path = "../../ttc", version = "0.1.0" }
hex = "0.4"

[package.metadata.risc0]
methods = ["guest"]

[workspace]
